Fix logout modal on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,9 @@
 .App * {
     box-sizing: border-box;
 }
+
+@media only screen and (min-width: 768px) {
+    .offcanvas-backdrop {
+      display: none;
+    }
+  }
